flux/apps/prometheus-public-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-public-proxy
spec:
  selector:
    matchLabels:
      app: prometheus-public-proxy
  template:
    metadata:
      labels:
        app: prometheus-public-proxy
    spec:
      containers:
        - name: prometheus-public-proxy
          image: ghcr.io/danielpower/prometheus-proxy:master@sha256:b8aa8bbfda906da877802d1bc29358bfd3e9211fe7636cdf34a46e5f56cfc591
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /config
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-public-proxy-config
