flux/apps/prometheus-public-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-public-proxy
spec:
  selector:
    app: prometheus-public-proxy
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
