flux/apps/prometheus-public-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-public-proxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus-public-proxy.danielpower.ca
      secretName: prometheus-public-proxy-tls
  rules:
    - host: prometheus-public-proxy.danielpower.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-public-proxy
                port:
                  name: http
